--- a/.github/workflows/e2e-test-kind.yaml
+++ b/.github/workflows/e2e-test-kind.yaml
@@ -23,14 +23,14 @@ jobs:
         with:
           path: ./_output/bin/linux/amd64/velero
           # The cache key a combination of the current PR number and the commit SHA
-          key: velero-cli-${{ github.event.pull_request.number }}-${{ github.sha }}
+          key: velero-cli-${{ github.event.pull_request.number }}-${{ github.sha }}-${{runner.arch}}
       - name: Fetch built image
         id: image-cache
         uses: actions/cache@v2
         with:
           path: ./velero.tar
           # The cache key a combination of the current PR number and the commit SHA
-          key: velero-image-${{ github.event.pull_request.number }}-${{ github.sha }}
+          key: velero-image-${{ github.event.pull_request.number }}-${{ github.sha }}-${{runner.arch}}
       - name: Fetch cached go modules
         uses: actions/cache@v2
         if: steps.cli-cache.outputs.cache-hit != 'true'
@@ -92,13 +92,13 @@ jobs:
         uses: actions/cache@v2
         with:
           path: ./_output/bin/linux/amd64/velero
-          key: velero-cli-${{ github.event.pull_request.number }}-${{ github.sha }}
+          key: velero-cli-${{ github.event.pull_request.number }}-${{ github.sha }}-${{runner.arch}}
       - name: Fetch built Image
         id: image-cache
         uses: actions/cache@v2
         with:
           path: ./velero.tar
-          key: velero-image-${{ github.event.pull_request.number }}-${{ github.sha }}
+          key: velero-image-${{ github.event.pull_request.number }}-${{ github.sha }}-${{runner.arch}}
       - name: Load Velero Image
         run:
           kind load image-archive velero.tar
@@ -130,6 +130,136 @@ jobs:
               GINKGO_FOCUS='Basic\]\[ClusterResource' VELERO_IMAGE=velero:pr-test \
               make -C test/e2e run
         timeout-minutes: 30
+      - name: Upload debug bundle
+        if: ${{ failure() }}
+        uses: actions/upload-artifact@v2
+        with:
+          name: DebugBundle
+          path: /home/runner/work/velero/velero/test/e2e/debug-bundle*
+  build_for_arm64:
+    runs-on: self-hosted
+    steps:
+      - name: Set up Go
+        uses: actions/setup-go@v2
+        with:
+          go-version: 1.18
+        id: go
+      # Look for a CLI that's made for this PR
+      - name: Fetch built CLI
+        id: cli-cache
+        uses: actions/cache@v2
+        with:
+          path: ./_output/bin/linux/arm64/velero
+          # The cache key a combination of the current PR number and the commit SHA
+          key: velero-cli-${{ github.event.pull_request.number }}-${{ github.sha }}-${{runner.arch}}
+      - name: Fetch built image
+        id: image-cache
+        uses: actions/cache@v2
+        with:
+          path: ./velero.tar
+          # The cache key a combination of the current PR number and the commit SHA
+          key: velero-image-${{ github.event.pull_request.number }}-${{ github.sha }}-${{runner.arch}}
+      - name: Fetch cached go modules
+        uses: actions/cache@v2
+        if: steps.cli-cache.outputs.cache-hit != 'true'
+        with:
+          path: ~/go/pkg/mod
+          key: ${{ runner.os }}-go-${{ hashFiles('**/go.sum') }}
+          restore-keys: |
+            ${{ runner.os }}-go-
+      - name: Check out the code
+        uses: actions/checkout@v2
+        if: steps.cli-cache.outputs.cache-hit != 'true' || steps.image-cache.outputs.cache-hit != 'true'
+      # If no binaries were built for this PR, build it now.
+      - name: Build Velero CLI
+        if: steps.image-cache.outputs.cache-hit != 'true'
+        run: |
+          make local
+      # If no image were built for this PR, build it now.
+      - name: Build Velero Image
+        if: steps.image-cache.outputs.cache-hit != 'true'
+        run: |
+          BUILDX_PLATFORMS=linux/arm64 IMAGE=velero VERSION=pr-test make container
+          docker save velero:pr-test -o ./velero.tar
+      - name: Make credential file
+        run: |
+          cat << EOF > /tmp/credential
+          [default]
+          aws_access_key_id=minio
+          aws_secret_access_key=minio123
+          EOF
+  # Run E2E test against all kubernetes versions on kind
+  run-e2e-test_for_arm64:
+    needs: build_for_arm64
+    runs-on: self-hosted
+    strategy:
+      matrix:
+        k8s:
+          # doesn't cover 1.15 as 1.15 doesn't support "apiextensions.k8s.io/v1" that is needed for the case
+          #- 1.15.12      Will not work due
+          #- 1.16.15      to cgroup v2
+          #- 1.17.17         issue.
+          #- 1.18.20
+          - 1.19.16
+          - 1.20.15
+          - 1.21.12
+          - 1.22.9
+          - 1.23.6
+          - 1.24.0
+      fail-fast: false
+    steps:
+      - name: Set up Go
+        uses: actions/setup-go@v2
+        with:
+          go-version: 1.18
+        id: go
+      - name: Install MinIO
+        run:
+          docker run -d --rm -p 9000:9000 -e "MINIO_ACCESS_KEY=minio" -e "MINIO_SECRET_KEY=minio123" -e "MINIO_DEFAULT_BUCKETS=bucket,additional-bucket" avinashyadavpuresoftware/velero_minio:latest
+      - uses: Avinash828/setup-kind@v0.5.0
+        with:
+          version: "v0.14.0"
+          image: "kindest/node:v${{ matrix.k8s }}"
+      - name: Fetch built CLI
+        id: cli-cache
+        uses: actions/cache@v2
+        with:
+          path: ./_output/bin/linux/arm64/velero
+          key: velero-cli-${{ github.event.pull_request.number }}-${{ github.sha }}-${{runner.arch}}
+      - name: Fetch built Image
+        id: image-cache
+        uses: actions/cache@v2
+        with:
+          path: ./velero.tar
+          key: velero-image-${{ github.event.pull_request.number }}-${{ github.sha }}-${{runner.arch}}
+      - name: Load Velero Image
+        run:
+          kind load image-archive velero.tar
+      # always try to fetch the cached go modules as the e2e test needs it either
+      - name: Fetch cached go modules
+        uses: actions/cache@v2
+        with:
+          path: ~/go/pkg/mod
+          key: ${{ runner.os }}-go-${{ hashFiles('**/go.sum') }}
+          restore-keys: |
+            ${{ runner.os }}-go-
+      - name: Run E2E test
+        run: |
+
+          # Match kubectl version to k8s server version
+          curl -LO https://dl.k8s.io/release/v${{ matrix.k8s }}/bin/linux/arm64/kubectl
+          sudo install -o root -g root -m 0755 kubectl /usr/local/bin/kubectl
+
+          GOPATH=~/go CLOUD_PROVIDER=kind \
+              OBJECT_STORE_PROVIDER=aws BSL_CONFIG=region=minio,s3ForcePathStyle="true",s3Url=http://$(hostname -i):9000 \
+              CREDS_FILE=/tmp/credential BSL_BUCKET=bucket \
+              ADDITIONAL_OBJECT_STORE_PROVIDER=aws ADDITIONAL_BSL_CONFIG=region=minio,s3ForcePathStyle="true",s3Url=http://$(hostname -i):9000 \
+              ADDITIONAL_CREDS_FILE=/tmp/credential ADDITIONAL_BSL_BUCKET=additional-bucket \
+              GINKGO_FOCUS='Basic\]\[ClusterResource' VELERO_IMAGE=velero:pr-test \
+              make -C test/e2e run
+              kind delete cluster
+              docker stop $(docker ps -a | grep avinashyadavpuresoftware/velero_minio:latest | awk '{print $1}')
+        timeout-minutes: 55
       - name: Upload debug bundle
         if: ${{ failure() }}
         uses: actions/upload-artifact@v2
